[tool.poetry]
name = "dogdripdl"
version = "0.1.0"
description = ""
authors = ["cmsong <dlcmaldmlzldxkdlrj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"
requests = "^2.0.0"
pypiwin32 = "^223"
utils = { path = "../utils" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
