[tool.poetry]
name = "m3u8dl"
version = "0.1.0"
description = ""
authors = ["cmsong <dlcmaldmlzldxkdlrj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^2.0.2"
requests = "^2.29.0"
uvicorn = "^0.22.0"
utils = { path = "../utils" }

[tool.poetry.scripts]
m3u8dl = "m3u8dl.main:main"
test = "m3u8dl_test.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
